fix height issues in chat, now input bar will be always visible

--- a/src/reactViews/iq/pages/chatscreen/IqChat.scss
+++ b/src/reactViews/iq/pages/chatscreen/IqChat.scss
@@ -17,7 +17,6 @@
 
 .chatscope-chat-container {
   flex: 1;
-  min-height: "400px";
   height: "100vh";
   background-color: var(--vscode-sideBar-background);
   color: var(--vscode-sideBar-foreground);
